tests/type/bad/escaping_type_var.hel
foreign io_unit: IO<()>;

x = x;

main = io_unit;
